# lifegame-modern-cpp

./: .clang-format  .editorconfig  CMakeLists.txt  CMakePresets.json  README.md
.github/: copilot-instructions.md
app/: main.cpp
tests/: test_life.cpp
